# Firestorm

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
.github/workflows/: build.yml  windows.yml
Editor/: CMakeLists.txt
Editor/Source/: Editor.cpp
Engine/: CMakeLists.txt
Engine/Include/Core/: App.hpp  Components.h  Constants.hpp  Context.h  ECS.h  Engine.h  Engine.hpp  EnginePCH.hpp  Events.hpp  FileIO.h  FileIO.hpp  FileSystem.h  Input.h  Macros.hpp  Project.hpp  Renderer.hpp  ResourceManager.h  ResourceSystem.h  System.hpp  Window.hpp
Engine/Include/Core/Render/: Renderer.h  Window.h
Engine/Include/Core/Render/Resources/: Model.hpp
Engine/Include/Core/Render/Vulkan/: Command.h  Constants.hpp  Context.h  Descriptor.h  Device.h  Image.h  Queue.h  Renderer.h  Swapchain.h  Sync.h  Utils.h  VulkanCommand.h  VulkanConstants.hpp  VulkanContext.h  VulkanQueue.h  VulkanRenderer.h  VulkanSwapchain.h  VulkanSync.h
Engine/Include/Core/Render/Vulkan/Pipelines/: GeometryPipeline.h  PipelineBuilder.h  VulkanGeometryPipeline.h  VulkanMeshPipeline.h  VulkanPipelineBuilder.h
Engine/Include/Core/Render/Vulkan/Pipelines/Backend/: ComputePipeline.h  GraphicsPipeline.h
Engine/Include/Core/Render/Vulkan/Resources/: Buffer.h  Descriptor.h  Image.h  Model.h  ModelManager.h  VulkanBuffer.h  VulkanDescriptor.h  VulkanImage.h  VulkanModel.h  VulkanResourceLoader.h
Engine/Include/Core/Render/Vulkan/Tools/: Enums.hpp  Utils.h  VulkanUtils.h
Engine/Include/Core/Systems/: ECS.h  SceneSystem.h
Engine/Include/Render/: IRenderBackend.hpp  RenderConstants.hpp  RenderEnums.hpp  RenderStructs.hpp
Engine/Include/Render/DX12/: HelpersDX12.hpp  RenderBackendDX12.hpp  RenderStructsDX12.hpp
Engine/Include/Systems/: CameraSystem.h  System.hpp
Engine/Include/Tools/: ArrayProxy.h  Constants.hpp  EnginePCH.hpp  EnumFlags.hpp  Enums.h  Log.h  Log.hpp  Macros.hpp  Serializer.h  Tools.h  Tools.hpp  TypeDefs.hpp  Warnings.hpp
Engine/Shaders/: CMakeLists.txt  gradient.comp  mesh.frag  mesh.glsl  mesh.vert  quad.frag  quad.vert  triangle.frag  triangle.vert  uber.frag  uber.vert
Engine/Source/Core/: Components.cpp  Context.cpp  ECS.cpp  Engine.cpp  EnginePCH.hpp  FileIO.cpp  FileSystem.cpp  Input.cpp  Project.cpp  Renderer.cpp  ResourceManager.cpp  ResourceSystem.cpp  SceneSystem.cpp  Window.cpp
Engine/Source/Core/Render/: Renderer.cpp  Window.cpp
Engine/Source/Core/Render/Vulkan/: Command.cpp  Descriptor.cpp  Device.cpp  Image.cpp  Queue.cpp  Renderer.cpp  Swapchain.cpp  Utils.cpp  VulkanCommand.cpp  VulkanContext.cpp  VulkanQueue.cpp  VulkanRenderer.cpp  VulkanSwapchain.cpp
Engine/Source/Core/Render/Vulkan/Pipelines/: GeometryPipeline.cpp  VulkanGeometryPipeline.cpp  VulkanMeshPipeline.cpp  VulkanPipelineBuilder.cpp
Engine/Source/Core/Render/Vulkan/Pipelines/Backends/: ComputePipeline.cpp  GraphicsPipeline.cpp
Engine/Source/Core/Render/Vulkan/Resources/: Buffer.cpp  Image.cpp  Model.cpp  ModelManager.cpp  VulkanDescriptor.cpp  VulkanImage.cpp  VulkanModel.cpp  VulkanResourceLoader.cpp
Engine/Source/Core/Render/Vulkan/Tools/: VulkanUtils.cpp
Engine/Source/Core/Systems/: ECS.cpp  FileSystem.cpp  SceneSystem.cpp
Engine/Source/Core/Vulkan/: Command.cpp  Context.cpp  Queue.cpp  Renderer.cpp  Swapchain.cpp  Sync.cpp  VulkanCommand.cpp  VulkanContext.cpp  VulkanRenderer.cpp  VulkanSwapchain.cpp  VulkanSync.cpp
Engine/Source/Core/Vulkan/Pipelines/: GeometryPipeline.cpp  PipelineBuilder.cpp  VulkanGeometryPipeline.cpp  VulkanPipelineBuilder.cpp
Engine/Source/Core/Vulkan/Resources/: Buffer.cpp  Descriptor.cpp  Image.cpp  Model.cpp  ModelManager.cpp  VulkanBuffer.cpp  VulkanDescriptor.cpp  VulkanImage.cpp  VulkanModel.cpp  VulkanResourceLoader.cpp
Engine/Source/Core/Vulkan/Tools/: Utils.cpp
Engine/Source/Render/DX12/: RenderBackendDX12.cpp
Engine/Source/Systems/: CameraSystem.cpp
Engine/Source/Tools/: Log.cpp  Serializer.cpp  Tools.cpp
Sandbox/: CMakeLists.txt
Sandbox/Assets/Models/: attributions.txt
Sandbox/Assets/Models/cesium/: CesiumMilkTruck.gltf
Sandbox/Assets/Models/chess/: ABeautifulGame.gltf
Sandbox/Source/: Sandbox.cpp
Scripts/: Setup.bat  SetupPython.py  SetupVulkan.py
Scripts/Compression/: KtxConverter.bat
Scripts/Python/: SetupPython.py  SetupVulkan.py  Utils.py  requirements.txt
